Added user dao Added Security and Application Config Added Login feature (without password hashing) Added logging
Added complete model classes
Created DAOs files
Created Services files
Created part of rest files